force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/Preonboarding_Task_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Onboarding Task Mapping</label>
    <pluralLabel>Onboarding Task Mappings</pluralLabel>
</CustomObject>