force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/fields/Contact_API__c.field-meta.xml
<CustomField>
    <fullName>Contact_API__c</fullName>
    <label>Contact API</label>
    <length>40</length>
    <type>Text</type>
</CustomField>