force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/fields/Navigation_Required__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Navigation Required</label>
    <type>Checkbox</type>
</CustomField>