force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/fields/Onboarding_Task__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Task__c</fullName>
    <label>Onboarding Task</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre</fullName>
                <default>true</default>
                <label>Pre</label>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>