force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>