force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Value should Only Queue, User or Contact</inlineHelpText>
    <label>Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>