force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>