force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/validationRules/Navigation_Address_is_Requried.validationRule-meta.xml
<ValidationRule>
    <fullName>Navigation_Address_is_Requried</fullName>
    <active>true</active>
    <errorConditionFormula>Navigation_Required__c &amp;&amp; ISBLANK( Navigation_address__c )</errorConditionFormula>
    <errorDisplayField>Navigation_address__c</errorDisplayField>
    <errorMessage>Navigation Address is Required.</errorMessage>
</ValidationRule>