force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/validationRules/When_Type_is_Queue_or_User.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Type_is_Queue_or_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(Type__c == &apos;Queue&apos; ,Type__c == &apos;User&apos;),
ISBLANK( Assigned_To__c )
)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Assigned To is Required.</errorMessage>
</ValidationRule>