force-app/main/default/objects/Preonboarding_Task_Mapping__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Assigned_To__c</columns>
    <columns>Contact_API__c</columns>
    <columns>Due_Date_Days__c</columns>
    <columns>Task_Subject__c</columns>
    <columns>Unique_Identifier__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>